traffic-mgmt/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service-v1
  labels:
    app: backend-service
    version: v1
spec:
  replicas: 3 #1 
  selector:
    matchLabels:
      app: backend-service
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: backend-service
        version: v1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/mesh-training/back-end:1.0
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend-service
  ports:
    - port: 8080
      name: http
