traffic-mgmt/fe-no-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-trace-svc
  labels:
    app: fe-trace-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-trace-svc
      version: v1
  template:
    metadata:
      labels:
        app: fe-trace-svc
        version: v1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/mesh-training/fe-trace:1.0
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: fe-trace-svc
  labels:
    app: fe-trace-svc
spec:
  selector:
    app: fe-trace-svc
  ports:
    - port: 8080
      name: http
