traffic-mgmt/backend-dr-loadbalancer.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: backend-dr
spec:
  host: backend-service
  trafficPolicy: 
    loadBalancer:
      simple: ROUND_ROBIN #LEAST_CONN #RANDOM
