traffic-mgmt/backend-dr-subsets-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-dr
spec:
  host: backend-service
  subsets:
    - name: v2
      labels:
        version: v2
      trafficPolicy: 
        loadBalancer:
          simple: RANDOM
