traffic-mgmt/backend-vs-0-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-vs-retry     
spec:
  hosts:
    - backend-service
  http:
    - retries:
        attempts: 0
      route:
      - destination:
          host: backend-service
