traffic-mgmt/backend-vs-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - backend-service
  http:
    - retries:
        attempts: 0  
      route:
      - destination:
          host: backend-service
          port:
            number: 8080
          subset: v2
