traffic-mgmt/backend-vs-header-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - backend-service
  http:
    - match:
      - headers:
          #opt-in: 
            #exact: 'yes' 
          user-agent:   
            regex: '.*Firefox.*'                       
      route:
        - destination:
            host: backend-service
            port:
              number: 8080
            subset: v2  
    - match:
      - headers:
          opt-in: 
            exact: 'yes' 
          #user-agent:   
            #regex: '.*Firefox.*'                       
      route:
        - destination:
            host: backend-service
            port:
              number: 8080
            subset: v2                    
    - route:
        - destination:
            host: backend-service
            port:
                number: 8080
            subset: v1
