traffic-mgmt/backend-vs-mirroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - backend-service
  http:
    - route:
      - destination:
          host: backend-service
          port:
            number: 8080
          subset: v1
        weight: 100
      mirror:
        host: backend-service
        port:
          number: 8080
        subset: v2
      mirror_percent: 100
