traffic-mgmt/backend-vs-route-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - backend-service
  http:
    - route:
      - destination:
          host: backend-service
          port:
            number: 8080
          subset: v1
        weight: 100  
      - destination:
          host: backend-service
          port:
            number: 8080
          subset: v2
        weight: 0
