traffic-mgmt/backend-vs-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-vs     
spec:
  hosts:
    - backend-service
  http:
    - route:
      - destination:
          host: backend-service
      timeout: 1.000s
