traffic-mgmt/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - 'frontend-service.apps.cluster-tw67c.tw67c.sandbox1520.opentlc.com'
  gateways:
    - frontend-gw
  http:
    - route:
      - destination:
          host: frontend-service
          port:
            number: 8080
